// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Page 1`] = `
<select
  className="ola_select"
  defaultValue=""
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value=""
  >
    None
  </option>
</select>
`;

exports[`Default defaultValue 1`] = `
<select
  className="ola_select"
  defaultValue="strawberry"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value=""
  >
    None
  </option>
</select>
`;

exports[`Default with empty option 1`] = `
<select
  className="ola_select"
  defaultValue=""
>
  <option
    disabled={true}
    value=""
  >
    Empty option
  </option>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value=""
  >
    None
  </option>
</select>
`;

exports[`Default with value 1`] = `
<select
  className="ola_select"
  defaultValue="vanilla"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value=""
  >
    None
  </option>
</select>
`;
